0.4.0-rc1 (server-only):
[SERVER]
+ Send the modpack list via the heartbeat!

0.4.0-beta9:
[CLIENT]
* Fix JAR repacking bug.
[SERVER]
* Fix using non-ZIP/JAR files as jarPatches.

0.4.0-beta8:
[CLIENT]
* Fix authentication bugs.
[SERVER]
+ Add sending server/client version via heartbeat.
+ Resolve ~ home paths for lookupDirectories.
* Invalidate the UUID accidentally spread in beta7.

0.4.0-beta7 (server-only):
[SERVER]
+ Completely change config file format.
* Fix launcher exporting in local mode.

0.4.0-beta6 (server-only):
[SERVER]
+ Add code to update package.json. (If not working, remove AsieLauncher/internal/info.json and try again.)
* Fix JAR repacking.
* Fix many other issues in the preceding hotfixes.

0.4.0-beta5:
[CLIENT]
+ Add logging to file.
/ Change logging format to use Java's Logger
[SERVER]
+ The server now generates the launcher.jar!
+ Major rewrite - server now updates itself! Yes, seriously. It also updates the launcher.
/ Refactor a lot of the code.

0.4.0-beta4:
[CLIENT]
+ Add support for saving session information to remove the need to re-type your password.
+ Add support for no backgrounds and .jpg backgrounds.
[SERVER]
+ You can now also use AsieLauncher/mods-client as a directory.

0.4.0-beta3:
[CLIENT]
+ Fix loading Minecraft 1.6 when server is down
+ Fix path creation on some Windows configurations.
[SERVER]
+ Add custom default JVM arguments in AsieLauncher/config.json
/ WARNING: 1.6.2 libraries are now put in AsieLauncher/libs, and JAR patches are put in AsieLauncher/jarPatches!

0.4.0-beta2:
[SERVER]
* Fix a copypasting mistake.

0.4.0-beta:
- SOLARIS HAS BEEN DEPRECATED!
[CLIENT]
+ Implement Yggdrasil authentication.
+ Add 1.6 Minecraft launcher code.
+ Rewrite JAR repacking to actually work.
+ Automatically download LiteLoader for .litemods.
  (BETA: Requires Forge to work for now)
[SERVER]
+ Lets you dump web server files to a directory: node also -l
+ Show debug messages with -d.

0.3.1:
* Bump config revision to 5.
[CLIENT]