@@ -11,39 +11,37 @@ var config = {
 }
 	
 function getDirectoryList(name, destName, addLocation, prefix) {
-  if(!_.isString(prefix)) prefix = "";
-  if(!fs.existsSync(name)) return [];
-  return _.chain(wrench.readdirSyncRecursive(name))
-          .filter(function(file) {
-            var location = name+"/"+file;
-            var blacklisted = false;
-            _.each(config.blacklistedFiles, function(test) {
-              if(location.indexOf(test) >= 0) {
-                blacklisted = true;
-                util.say("info", "Blacklisted "+file);
-              }
-            });
-            if(blacklisted) return false;
-            else return !(fs.lstatSync(name+"/"+file).isDirectory());
-          })
-          .map(function(file) {
-            var fileNew = {"filename": prefix+file, "size": util.getSize(name+"/"+file), "md5": util.md5(name+"/"+file)};
-						var destination = destName+file;
-            if(addLocation) fileNew.location = name+"/"+file;
-				    fileNew.overwrite = !(_.contains(config.nonOverwrittenFiles, file));
-						if(fileNew.overwrite)
-				      fileNew.overwrite = !(_.some(config.nonOverwrittenFiles, function(nameNO) {
-				        return (destination.indexOf(nameNO) == 0);
-				      }));
-            return fileNew;
-          })
-          .value();          
+	if(!_.isString(prefix)) prefix = "";
+	if(!fs.existsSync(name)) return [];
+	return _.chain(wrench.readdirSyncRecursive(name))
+		.filter(function(file) {
+			var location = name+"/"+file;
+			var blacklisted = false;
+			_.each(config.blacklistedFiles, function(test) {
+				if(location.indexOf(test) >= 0) {
+					blacklisted = true;
+					util.say("info", "Blacklisted "+file);
+				}
+			});
+			if(blacklisted) return false;
+			else return !(fs.lstatSync(name+"/"+file).isDirectory());
+		}).map(function(file) {
+			var fileNew = {"filename": prefix+file, "size": util.getSize(name+"/"+file), "md5": util.md5(name+"/"+file)};
+			var destination = destName+file;
+			if(addLocation) fileNew.location = name+"/"+file;
+			fileNew.overwrite = !(_.contains(config.nonOverwrittenFiles, file));
+			if(fileNew.overwrite)
+				fileNew.overwrite = !(_.some(config.nonOverwrittenFiles, function(nameNO) {
+					return (destination.indexOf(nameNO) == 0);
+				}));
+			return fileNew;
+		}).value();
 }
 exports.getDirectoryList = getDirectoryList;
 
 function getPossibleDirectories(name) {
 	var dirs = [];
-	if(name.indexOf(".") === 0) dirs = [name];
+	if(name.indexOf(".") === 0 || name.indexOf("/") === 0) dirs = [name];
 	else {
 		_.each(config.lookupDirectories, function(_d) {
 			var d = _d;
@@ -56,13 +54,13 @@ function getPossibleDirectories(name) {
 exports.getPossibleDirectories = getPossibleDirectories;
 
 function getDirectoriesList(name, addLocation) {
-  var destName = name+"/";
-  if(name == "root") destName = ""; // Special case
-  var dirs = [];
-  _.each(getPossibleDirectories(name), function(dir) {
-    dirs = _.union(dirs, getDirectoryList(dir, destName, addLocation));
-  });
-  return dirs;
+	var destName = name+"/";
+	if(name == "root") destName = ""; // Special case
+	var dirs = [];
+	_.each(getPossibleDirectories(name), function(dir) {
+		dirs = _.union(dirs, getDirectoryList(dir, destName, addLocation));
+	});
+	return dirs;
 }
 
 var totalSize = 0;
@@ -73,12 +71,12 @@ exports.initialize = function(_config) {
 }
 
 exports.file = function(dir) {
-  var list = getDirectoriesList(dir, false);
-  return _.map(list, function(file) {
-    file.filename = dir+"/"+file.filename;
-    totalSize += file.size;
-    return file;
-  });
+	var list = getDirectoriesList(dir, false);
+	return _.map(list, function(file) {
+		file.filename = dir+"/"+file.filename;
+		totalSize += file.size;
+		return file;
+	});
 }
 
 
@@ -101,22 +99,22 @@ exports.zip = function(dir, overwrite) {
 		var zipData = {"filename": dir+".zip", "directory": dir == "root" ? "" : dir,
 			"size": util.getSize(name),
 			"md5": util.md5(name), "overwrite": overwrite || true};
-	  totalSize += zipData.size;
+		totalSize += zipData.size;
 		return zipData;
 	} else return null;
 }
 
 function getFiles(dir) {
-  var list = getDirectoryList(dir, "", false);
-  var size = util.getFilesSize(list);
-  return {"files": list, "size": size};
+	var list = getDirectoryList(dir, "", false);
+	var size = util.getFilesSize(list);
+	return {"files": list, "size": size};
 }
 exports.getFiles = getFiles;
 
 exports.platforms = function() {
 	var p = {};
 	_.each(fs.readdirSync("./AsieLauncher/platform"), function(platform) {
-	  p[platform] = getFiles("./AsieLauncher/platform/"+platform);
+		p[platform] = getFiles("./AsieLauncher/platform/"+platform);
 	});
 	return p;
 }
