@@ -13,6 +13,7 @@
     "request": ">=2.27.0",
     "async": ">=0.2.9",
     "archiver": ">=0.4.9",
-    "node-uuid": ">=1.4.1"
+    "node-uuid": ">=1.4.1",
+    "js-yaml": ">=2.1.0"
   }
 }
